Treino com Selenium
from selenium import webdriver

navegador = webdriver.Edge()
navegador.get("https://www.youtube.com/watch?v=1m6en0SQNFs&list=PLnRRml5Wccw5XZNkOXynPl16SxvsgazK-")

#WebDriver driver = new EdgeDriver();

#driver.get("https://google.com");

Cell In[4],   <a href='vscode-notebook-cell:?execution_count=4&line=1'>line 1</a>
    WebDriver driver = new EdgeDriver();
              ^
SyntaxError: invalid syntax

#navegador.get("https://www.youtube.com/watch?v=1m6en0SQNFs&list=PLnRRml5Wccw5XZNkOXynPl16SxvsgazK-")
